refactor(catalog): 优化代码格式与逻辑，修正样式与异常处理
- 统一代码格式，调整方法参数排列及括号位置，提升代码可读性
- 精简多处条件判断及异常抛出代码，合并判断逻辑减少冗余
- 规范空格使用，避免不必要的行内注释碎片
- 调整部分接口方法签名，实现同一行声明，提高简洁性
- 修复 CatalogApplicationService 中部分参数赋值时的格式问题
- 增加部分方法中的空行，提升代码结构层次感
- 优化 CatalogApiModels 中 JSON 映射异常处理，使异常提示更清晰
- 对 CatalogAssetKind 枚举进行格式调整，添加空行区分属性定义
- 调整 CatalogControlConfiguration 注入 Bean 的换行及缩进，增加 HttpClient 参数设置
- 修改 CatalogController 中 REST API 处理方法的代码风格，规范链式调用换行
- 对 ApiKey 类中的非空校验代码进行微调，整理多条件判断表达式
- 在 CatalogApplicationService 中添加缺失的空行，规范 lambda 与流写法
- 统一使用 Optional 和 Stream API 的代码风格，使代码简洁连贯
- 移除 ApiKeyRepository 和 AuthorizationRepository 接口中的多余换行，统一一行声明
- 调整对象存储调用时的异常处理格式，合并代码行，减少重复
- 修正 CatalogVersion 列表分页游标处理逻辑，避免多余变量声明
- 完善 audit 方法调用的参数换行，提升参数可读性和维护性
- 规范注释格式，调整中文注释的对齐和空格，保持文档整洁一致
- 优化 Payload 验证及密钥引用校验的链式编码风格，减少代码块大小